# ingrain

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  WORKLOG.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: demo.tape
docs/: cli-skill.md  compiler-rules-explained.md  eval-report.md  eval-standards.md  evals.md  hermes-current-map.md  hermes-memory-provider-comparison.md  hermes-test-report.md  hermes.md  launch-readiness-audit.md  launch.md  learned-experience-model.md  learned-experience-results.md  les-hard-report.md  live-eval-report.md  live-hindsight-local-report.md  mind-v3-sandbox-universe-lane-spec.md  philosophy.md  publishing.md  research-arc.md  sandbox-universe-eval-spec.md  sandbox-universe-report.md  sandbox-universe-scoring.md  sandbox-universe-split-spec.md  visual-demo.md
docs/archive/: evals.md  launch-readiness-audit.md  live-eval-report.md
docs/evidence/: openviking-startup-recheck.md
docs/evidence/deterministic-les-comparison/: report.md  results.csv  results.json
docs/visualizations/: sandbox-universe-3d.html
examples/: banana-test.md  correction-carry-forward.md  launch-demo.md
integrations/hermes/: README.md  ingrain_provider.py
src/aeonik_ingrain/: __init__.py  cli.py  db.py  demo.py  hermes_provider.py  practice.py  report.py  schema.sql  security.py  skills.py
tests/: test_compile_hydrate.py  test_demo.py  test_eval.py  test_hermes_consolidator.py  test_hermes_plugin.py  test_practice_skill.py  test_security.py  test_why_cli.py
(+346 files in other folders)
