[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aeonik-ingrain"
version = "0.1.0"
description = "Learned experience layer for autonomous agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aeonik" }]
keywords = ["ai-agents", "agent-memory", "hermes-agent", "llm", "evals", "learned-experience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ingrain = "aeonik_ingrain.cli:main"
aeonik-ingrain = "aeonik_ingrain.cli:main"

[project.urls]
Homepage = "https://github.com/benlloydg/ingrain"
Repository = "https://github.com/benlloydg/ingrain"
Issues = "https://github.com/benlloydg/ingrain/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aeonik_ingrain = ["schema.sql", "evals/fixtures/*.jsonl"]
